--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f8f8f8;
+	
+}
+
+.book-library{
+	margin-left:200px;
+	background-color:#ffffff;
+	width:220px;
+	
+}
+h2{
+	background-color:#f8f8f8;		
+	text-align:center;
+}
+.book{
+	margin-bottom:20px;
+	background-color:#f8f8f8;	
+	text-align:center;
+	padding:10px
+	
+}
+p{
+	text-align:left;
+}
+.author{
+	color: #777777;
+	text-align:left;
+}
+.button{
+	background-color:#2ecc71;
+}
