--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1{
 }
 .book{
 	margin-bottom:20px;
-	background-color:rgb(255,255,255);	
+	background-color:white;	
 	text-align:center;
 	padding:10px
 	
